# board

./: .env  .gitignore  .gitmodules  Cargo.toml  LICENSE
examplefiles/: 4th_is_a_pass.pos  example.pos  example_for_science.lib  example_for_science_with_variant_maybe.lib  lib_3_is_pass.lib  lib_4_in_corner.lib  lib_4_left_right_up_down.lib  lib_comment.lib  lib_documented.lib  lib_nocomment.lib  lib_single_stone_15xB.lib  lib_two_stone_15xB.lib  lib_two_top_rows.lib  nocomments.bdt  nocomments.lib  pos_4_in_corner.lib  pos_4th_is_a_pass.lib  pos_comment.lib  pos_nocomment.lib  pos_single_stone_15xB.lib  pos_two_top_rows.bak  pos_two_top_rows.lib  pos_two_top_rows.pos
examplefiles/merges/: all.lib  left.bak  merry.bak  merry.lib  right.bak  right.lib  up.bak  up.lib
renju-ui/: Cargo.toml
renju-ui/docs/: index.html  sw.js
renju-ui/src/: app.rs  board.rs  lib.rs  main.rs
src/: board.rs  board_logic.rs  evaluator.rs  lib.rs
src/lib/: board.rs  board_logic.rs  errors.rs  evaluator.rs  file_reader.rs  lib.rs  move_node.rs  util.rs
src/lib/board/: board_logic.rs  evaluator.rs
src/lib/file_reader/: .mod.rs.swp  .renlib.rs.swp  .renlib_legacy.rs.swp  mod.rs  renlib.rs  renlib_legacy.rs  renlib_parser.rs
src/lib/file_reader/renlib/: parser.rs
tests/: null_move.lib  null_move2.lib  one_move.lib  renlib_test.rs  rps-fail.lib
