[package]
name = "renju-board"
version = "0.1.0"
authors = ["Emil Gardström <emil.gardstrom@gmail.com>"]
description = "A WIP game board for renju designed in rust!"
readme = "README.md"
license = "MIT"
publish = false
edition = "2018"

[lib]
name = "renju"
path = "src/lib/lib.rs"
doctest = false

[[bin]]
name = "renju-board"
path = "src/bin/main.rs"

[profile.release] # Make sure to turn this off later
debug = true

[dependencies]
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.15", features = [
    "env-filter",
    "std",
    "fmt",
] }
tracing-log = "0.1.2"
daggy = "0.8.0"
num = "0.4.0"
nom = "7.0.0-alpha1"
color-eyre = "0.6.2"
thiserror = "1.0.32"
clap = { version = "3.2.16", features = ["color"] }
dotenv = "0.15.0"
rustyline = "10.0.0"
ansi_term = "0.12.1"
bitflags = "1.3"
bytemuck = "1.12.0"
serde = { version = "1", features = ["derive"], optional = true }

[features]
default = []
serde = ["dep:serde", "daggy/serde-1"]

[dev-dependencies]
test-log = { version = "0.2.11", default-features = false, features = [
    "trace",
] }

[workspace]
members = ["renju-ui"]
