[package]
name = "renju-board"
version = "0.1.0"
authors = ["Emil Gardström <emil.gardstrom@gmail.com>"]
description = "A WIP game board for renju designed in rust!"
readme = "README.md"
license = "MIT"
publish = false
edition = "2021"

[lib]
name = "renju"
path = "src/lib/lib.rs"
doctest = false

[[bin]]
name = "renju-board"
path = "src/bin/main.rs"

[profile.release] # Make sure to turn this off later
debug = true

[dependencies]
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [
    "env-filter",
    "std",
    "fmt",
] }
tracing-log = "0.2.0"
daggy = "0.8.0"
num = "0.4.1"
nom = "7.1.3"
color-eyre = "0.6.2"
thiserror = "1.0.57"
clap = { version = "4.5.1", features = ["color"] }
dotenv = "0.15.0"
rustyline = "13.0.0"
ansi_term = "0.12.1"
bitflags = "2.4"
bytemuck = "1.14.3"
serde = { version = "1", features = ["derive"], optional = true }

[features]
default = []
serde = ["dep:serde", "daggy/serde-1"]

[dev-dependencies]
test-log = { version = "0.2.14", default-features = false, features = [
    "trace",
] }

[workspace]
members = ["renju-ui"]
resolver = "2"

[patch.crates-io]
# eframe = { git = "https://github.com/emilk/egui" }
# egui = { git = "https://github.com/emilk/egui" }
# egui_extras = { git = "https://github.com/emilk/egui" }
