[package]
name = "renju_ui"
default-run = "renju_ui_bin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "renju_ui_bin"
path = "src/main.rs"

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
egui = "0.19.0"
eframe = { version = "0.19.0", features = ["persistence"] }
serde = { version = "1", features = [
    "derive",
] } # You only need this if you want app persistence
renju-board = { path = "..", features = ["serde"] }
egui_extras = "0.19.0"
rfd = { version = "0.10.0" }
tracing = "0.1.36"
poll-promise = { version = "0.1.0", features = ["tokio"] }
tokio = { version = "1.20.1" }
color-eyre = { version = "0.6.2", features = ["tracing-error"] }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"
tokio = { version = "1.20.1", features = ["sync", "rt", "macros"] }
color-eyre = { version = "0.6.2", default-features = false, features = [
    "tracing-error",
    "track-caller",
] }
# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
tokio = { version = "1.20.1", features = ["sync", "rt"] }


# [profile.release]
# opt-level = 2 # fast and small wasm


[patch.crates-io]

# If you want to use the bleeding edge version of egui and eframe:
# egui = { git = "https://github.com/emilk/egui", branch = "master" }
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# egui = { path = "../egui/egui" }
# eframe = { path = "../egui/eframe" }
