[package]
name = "renju_ui"
default-run = "renju_ui_bin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "renju_ui_bin"
path = "src/main.rs"

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
egui = "0.26.2"
eframe = { version = "0.26.2", features = ["persistence"] }
serde = { version = "1", features = [
    "derive",
] } # You only need this if you want app persistence
renju-board = { path = "..", features = ["serde"] }
egui_extras = "0.26.2"
rfd = { version = "0.13.0" }
tracing = "0.1.40"
poll-promise = { version = "0.3.0", features = ["tokio"] }
tokio = { version = "1.36.0" }
color-eyre = { version = "0.6.2", features = ["tracing-error"] }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"
tokio = { version = "1.36.0", features = ["sync", "rt", "macros"] }
color-eyre = { version = "0.6.2", default-features = false, features = [
    "tracing-error",
    "track-caller",
] }
# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
tracing-wasm = "0.2"
tokio = { version = "1.36.0", features = ["sync", "rt"] }
